[tool.poetry]
name = "tfprotocol_client"
version = "1.0.1"
description = "Transfer Protocol client implemented in python."
authors = ["Leonel Garcia <lagcleaner@gmail.com>"]
license = "LICENSE.rst"
readme = "README.rst"
homepage = "https://github.com/lagcleaner/tfprotocol_client_py"
repository = "https://github.com/lagcleaner/tfprotocol_client_py"
keywords = ["transfer", "protocol", "client", "python","tfproto", "tfprotocol"]


[tool.poetry.dependencies]
python = "^3.7.2"
pycryptodome = "^3.15.0"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
