[tool.poetry]
name = "tfprotocol_client"
version = "1.2.2"
description = "Transfer Protocol client implemented in python."
authors = ["Leonel Garcia <lagcleaner@gmail.com>"]
license = "LICENSE.rst"
readme = "README.rst"
homepage = "https://github.com/lagcleaner/tfprotocol_client_py"
repository = "https://github.com/lagcleaner/tfprotocol_client_py"
keywords = ["transfer", "protocol", "client", "python","tfproto", "tfprotocol"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: File Sharing"
]

[tool.poetry.dependencies]
python = "^3.7.2"
pycryptodome = "^3.15.0"
multipledispatch = "^0.6.0"

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pytest = "^7.1.3"
coverage = "^6.5.0"
black = "^22.8.0"
python-dotenv = "^0.21.0"
pytest-ordering = "^0.6"
pytest-depends = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
